# myfeishuCLI

./: .env.example  .gitignore  DEPLOY_CLAW_CLOUD.md  README.md  pyproject.toml  test.py
.data/: processed_events.db
app/: config.py  dedupe.py  feishu.py  main.py  providers.py
feishu_multi_model_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
